--- a/public/components/css/nav.css
+++ b/public/components/css/nav.css
@@ -95,6 +95,7 @@ img {
   opacity: 0;
   pointer-events: none;
   transition: opacity .4s;
+  font-family: "Roboto", system-ui;
 }
 
 .search__close,
