--- a/public/components/css/register.css
+++ b/public/components/css/register.css
@@ -20,19 +20,20 @@
 }
 
 .container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100%;
-    gap: 50px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
 }
 
 .box-form h2{
     text-align: center;
     padding: 10px 0px 25px 0px;
     border-radius: 10px 10px 0px 0px;
-    width: 300px;
+    width: 200px;
+
     background-color: #7fa1c3;
     color: #f5eded;
 
@@ -49,7 +50,7 @@
 
 .register_form {
     height: 390px;
-    width: 380px;
+    width: 280px;
     background-color: #6482ad;
     padding: 2rem 1.5rem 2.5rem;
     box-shadow: 0 8px 32px hsla(230, 75%, 15%, .2);
@@ -102,4 +103,28 @@
     }
 .signup_login{
     margin-top: 10px;
+    margin-bottom: 10px;
 }
+.box-image img{
+    height: 200px;
+}
+.box-image{
+    display: flex;
+    justify-content: center;
+}
+@media screen and (min-width: 1023px) {
+    .container{
+        display: flex;
+        gap: 100px;
+    }
+    .register_form{
+        height: 390px;
+        width: 380px;
+    }
+    .box-form h2{
+        width: 300px;
+    }
+    .box-image img{
+        height: 400px;
+    }
+  }
