--- a/public/components/css/nav-backup.css
+++ b/public/components/css/nav-backup.css
@@ -52,11 +52,7 @@ a {
   text-decoration: none;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
+
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
@@ -126,10 +122,11 @@ img {
   align-items: center;
 }
 
-.nav__logo img {
+.image {
     height: 100px;
   transition: color .4s;
-
+  align-items: center;
+  position: absolute;
 }
 
 .bar{
@@ -166,7 +163,7 @@ img {
     background-color: var(--body-color);
     box-shadow: 0 8px 16px hsla(230, 75%, 32%, .15);
     width: 100%;
-    padding-block: 4.5rem 4rem;
+    padding-block: 4rem 4rem;
     transition: top .4s;
   }
 }
