--- a/public/components/css/register.css
+++ b/public/components/css/register.css
@@ -44,12 +44,24 @@
 
 
 .register_form,
-.register-group {
+.register-group,
+.login_form {
     display: grid;
 }
 
 .register_form {
-    height: 390px;
+    height: 420px;
+    width: 280px;
+    background-color: #6482ad;
+    padding: 2rem 1.5rem 2.5rem;
+    box-shadow: 0 8px 32px hsla(230, 75%, 15%, .2);
+    border-radius: 1rem 0.5rem 1rem 0.5rem;
+    row-gap: 1.25rem;
+    text-align: center;
+    transform: translateY(-1rem);
+}
+.login_form {
+    height: 250px;
     width: 280px;
     background-color: #6482ad;
     padding: 2rem 1.5rem 2.5rem;
@@ -71,8 +83,24 @@
     font-weight: var(--font-medium);
     margin-bottom: .25rem;
 }
+.login_label {
+    display: block;
+    text-align: initial;
+    color: var(--text-color-two);
+    font-weight: var(--font-medium);
+    margin-bottom: .25rem;
+}
 
 .register_input {
+    width: 100%;
+    background-color: var(--container-color);
+    border: 2px solid var(--border-color);
+    padding: 1rem;
+    border-radius: .5rem;
+    color: var(--text-color);
+    border: none;
+}
+.login_input {
     width: 100%;
     background-color: var(--container-color);
     border: 2px solid var(--border-color);
@@ -85,7 +113,11 @@
 .register_input::placeholder {
     color: var(--text-color);
 }
-.register_button{
+.login_input::placeholder {
+    color: var(--text-color);
+}
+.register_button,
+.login_button{
     display: inline-block;
     background-color: var(--first-color);
     width: 100%;
@@ -96,9 +128,11 @@
     cursor: pointer;
     transition: box-shadow .4s;
     border: none;
-
 }
 .register_button:hover{
+    box-shadow: 0 4px 24px hsla(230, 75%, 40%, .4);
+    }
+.login_button:hover{
     box-shadow: 0 4px 24px hsla(230, 75%, 40%, .4);
     }
 .signup_login{
@@ -118,7 +152,11 @@
         gap: 100px;
     }
     .register_form{
-        height: 390px;
+        height: 420px;
+        width: 380px;
+    }
+    .login_form{
+        height: 250px;
         width: 380px;
     }
     .box-form h2{
