--- a/public/components/css/nav.css
+++ b/public/components/css/nav.css
@@ -1,51 +1,13 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-:root {
-  --header-height: 3.5rem;
-  --first-color: hsl(230, 75%, 56%);
-  --title-color: hsl(230, 75%, 15%);
-  --text-color: hsl(230, 12%, 40%);
-  --body-color: hsl(230, 100%, 98%);
-  --container-color: hsl(230, 100%, 97%);
-  --border-color: hsl(230, 25%, 80%);
-  --two-color: #e2dad6;
-  --three-color:#7fa1c3;
-  --body-font: "Syne", sans-serif;
-  --h2-font-size: 1.25rem;
-  --normal-font-size: .938rem;
-  --font-regular: 400;
-  --font-medium: 500;
-  --font-semi-bold: 600;
-  --z-fixed: 100;
-  --z-modal: 1000;
+.input-nav{
+     border-radius: 10px;
+     outline: none;
+     font-size: 1.1em;
+     padding: 0 10px;
+     line-height: 37px;
 }
-.header-a{
-    top: 0;
-    left: 0;
-    width: 100%;
+.a-navbar{
+    background-color: #7da1c3;
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: white;
 }
-.header-a .navbar-a{
-    display: flex;
-    background-color: var(--two-color);
-    align-items: center;
-    justify-content: space-around;
-    height: 100px;
-}
-.header-a .navbar-a .logo > .image{
-    height: 100px;
-}
-.header-a .navbar-a .box-a > .ul-a {
-    display: flex;
-    list-style: none;
-    gap: 50px;
-}
-.header-a .navbar-a .box-a > ul > li{
-    background-color: #7fa1c3;
-    padding: 20px;
-    border-radius: 50%;
-}
-.header-a .navbar-a .box-a> ul > li > a{
-    text-decoration: none;
-    color: var(--text-color);
-    height: 50px;
-} */
