--- a/public/components/css/nav.css
+++ b/public/components/css/nav.css
@@ -11,3 +11,6 @@
     padding: 10px 20px;
     color: white;
 }
+header{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
