--- a/public/components/css/slider.css
+++ b/public/components/css/slider.css
@@ -65,11 +65,6 @@
 .slider .dots li.active{
     width: 30px;
 }
-@media screen and (max-width: 768px){
-    .slider{
-        height: 300px;
-    }
-}
 
 .slidertwo{
     width: 1200px;
@@ -99,7 +94,7 @@
 }
 .slidertwo .buttonstwo{
     position: absolute;
-    top: 45%;
+    top: 33%;
     left: 5%;
     width: 90%;
     display: flex;
@@ -139,7 +134,27 @@
     width: 30px;
 }
 @media screen and (max-width: 768px){
+    .slider{
+        height: 250px;
+        width: 95%;
+    }
+    .slider .buttons{
+        position: absolute;
+        top: 42%;
+        left: 5%;
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+    }
     .slidertwo{
-        height: 300px;
+        height: 70px;
+        width: 80%;
+    }
+    .slidertwo .listtwo img{
+        height: 100%;
+        object-fit: contain;
+    }
+    .slidertwo .buttonstwo{
+        visibility: hidden;
     }
 }
