--- a/public/components/css/app.css
+++ b/public/components/css/app.css
@@ -9,6 +9,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
+    overflow-x: hidden;
     height: 100vh;
     width: 100vw;
     font-family: "Roboto", system-ui;
