--- a/public/components/css/homeCustomer.css
+++ b/public/components/css/homeCustomer.css
@@ -4,9 +4,42 @@
 .carousel-item img {
     object-fit: cover;
 }
+.grid-card{
+    display: grid;
+    gap: 25px;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+}
 .card{
     background: white;
-    box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
-    height: 200px;
-    width: 150px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    /* box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px; */
+    height: 420px;
+    width: 400px;
+    padding: 10px;
+    border-radius: 10px;
+}
+.card-section{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+}
+.img-card img{
+    object-fit: cover;
+    max-height: 250px;
+    width: 100%;
+    border-radius: 5px 5px 0px 0px;
+}
+.text-card-detail{
+    margin-top: 5px;
+    width: 100%;
+    height: 175px;
+    padding-top: 5px;
+
+}
+.text-card-detail .text-card{
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    padding: 5px;
+    font-weight: 600;
 }
