--- a/public/components/css/app.css
+++ b/public/components/css/app.css
@@ -12,5 +12,6 @@ body{
     overflow-x: hidden;
     height: 100vh;
     width: 100vw;
+    background-color: #111827;
     font-family: "Roboto", system-ui;
 }
