--- a/public/components/css/homeCustomer.css
+++ b/public/components/css/homeCustomer.css
@@ -6,24 +6,25 @@
 }
 .grid-card{
     display: grid;
-    gap: 25px;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .card{
     background: #1f2937;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     /* box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px; */
-    height: 420px;
-    width: 400px;
-    padding: 10px;
+    height: 350px;
+    width: 180px;
     border-radius: 10px;
+    /* margin: 5px 10px 5px 10px; */
 }
 .card-section{
-    width: 100%;
     display: flex;
-    padding: 30px;
+
     justify-content: center;
     margin-bottom: 30px;
+}
+section{
+    width: 100%;
 }
 .img-card img{
     object-fit: cover;
@@ -44,4 +45,27 @@
 }
 .text-card-detail h2{
     font-weight: 600;
+}
+.see-all{
+    text-align: center;
+    padding-bottom: 20px;
+}
+.see-all a{
+    padding: 10px;
+    background: #1f2937;
+    border-radius: 10px;
+}
+@media (min-width: 768px) {
+    .grid-card{
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+        gap: 25px;
+    }
+    .card{
+        height: 420px;
+        width: 400px;
+        padding: 10px;
+    }
+    .card-section{
+        padding: 30px;
+    }
 }
