--- a/public/components/css/app.css
+++ b/public/components/css/app.css
@@ -12,6 +12,17 @@ body{
     overflow-x: hidden;
     height: 100vh;
     width: 100vw;
-    background-color: #111827;
     font-family: "Roboto", system-ui;
 }
+::-webkit-scrollbar{
+width: 5px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
