--- a/public/components/css/homeCustomer.css
+++ b/public/components/css/homeCustomer.css
@@ -15,7 +15,6 @@
     height: 350px;
     width: 180px;
     border-radius: 10px;
-    /* margin: 5px 10px 5px 10px; */
 }
 .card-section{
     display: flex;
@@ -66,6 +65,6 @@ section{
         padding: 10px;
     }
     .card-section{
-        padding: 30px;
+        margin-top: 10px;
     }
 }
